[package]
name = "learn-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
animals = { version = "0.1.0", path = "./animals" }
concurrency = { version = "0.1.0", path = "./concurrency" }
loops = { version = "0.1.0", path = "./loops" }
travel = { version = "0.1.0", path = "./travel" }
